<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_account_balance_recycler_view_header_id"
    android:layout_below="@+id/linear_layout_date_time"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_order_id"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:singleLine="true"
            android:gravity="center"
            android:text="@string/reminder_code"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_view_date_time_id"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/reminder_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_view_balance_id"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/reminder_no_register"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>