<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      https://mindorks.com/license/apache-v2
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vn.fintechviet.mobileplatforms.application.management.ui.forgot.password.ForgotPasswordActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="changePasswordViewModel"
            type="vn.fintechviet.mobileplatforms.application.management.ui.change.password.ChangePasswordViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/old_password"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                            app:passwordToggleEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/oldPassword"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|left|bottom"
                                android:inputType="textPassword"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/new_password"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                            app:passwordToggleEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/newPassword"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|left|bottom"
                                android:inputType="textPassword"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:textColorHint="@color/gray"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                            app:passwordToggleEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/confirmPassword"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_marginTop="30dp"
                                android:background="@drawable/input_border_bottom"
                                android:cursorVisible="true"
                                android:gravity="center|left|bottom"
                                android:inputType="textPassword"
                                android:maxLength="50"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black_effective" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/appCompatTextViewPasswordPolicy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="14dp" />
                    </RelativeLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/appCompatButtonChangePassWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_background_selector"
                        android:text="@string/confirm_password_button"
                        android:onClick="@{() -> changePasswordViewModel.onServerChangePasswordClick()}"
                        android:textColor="@color/black"
                        android:textSize="18dp" />
                </LinearLayout>
            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{changePasswordViewModel.isLoading ? View.VISIBLE : View.GONE}" />

    </FrameLayout>

</layout>